//
// Copyright (C) 2017-2026 Dominic Heutelbeck (dominic@heutelbeck.com)
//
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

/*
 * Copyright (C) 2017-2026 Dominic Heutelbeck (dominic@heutelbeck.com)
 *
 * SPDX-License-Identifier: Apache-2.0
 *
 * Protocol Buffer service definitions for SAPL PDP remote access.
 * These mirror the endpoints in io.sapl.api.pdp.PolicyDecisionPoint.
 */

syntax = "proto3";

package io.sapl.api.proto;

option java_package = "io.sapl.api.proto";
option java_outer_classname = "SaplServiceProtos";
option java_multiple_files = true;

import "sapl_types.proto";

// PolicyDecisionPoint service for remote policy evaluation.
// Mirrors io.sapl.api.pdp.PolicyDecisionPoint interface.
service PolicyDecisionPointService {

  // Streaming authorization decision.
  // Returns a continuous stream of decisions that updates when
  // relevant policies, attributes, or context change.
  // Mirrors PolicyDecisionPoint.decide(AuthorizationSubscription)
  rpc Decide(AuthorizationSubscription) returns (stream AuthorizationDecision);

  // Single authorization decision (one-shot).
  // Returns a single decision and completes.
  // Mirrors PolicyDecisionPoint.decideOnce(AuthorizationSubscription)
  rpc DecideOnce(AuthorizationSubscription) returns (AuthorizationDecision);

  // Streaming multi-authorization decisions.
  // For multiple subscriptions, returns a stream of individual decisions.
  // Each decision is identified by subscription_id.
  // Mirrors PolicyDecisionPoint.decide(MultiAuthorizationSubscription)
  rpc MultiDecide(MultiAuthorizationSubscription) returns (stream IdentifiableAuthorizationDecision);

  // Streaming multi-authorization decisions (bundled).
  // For multiple subscriptions, returns a stream of bundled decisions.
  // Each response contains all current decisions keyed by subscription_id.
  // Mirrors PolicyDecisionPoint.decideAll(MultiAuthorizationSubscription)
  rpc MultiDecideAll(MultiAuthorizationSubscription) returns (stream MultiAuthorizationDecision);

  // Single multi-authorization decision (one-shot, bundled).
  // Returns all decisions in a single response and completes.
  rpc MultiDecideAllOnce(MultiAuthorizationSubscription) returns (MultiAuthorizationDecision);

}
