//
// Copyright (C) 2017-2026 Dominic Heutelbeck (dominic@heutelbeck.com)
//
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

/*
 * Copyright (C) 2017-2026 Dominic Heutelbeck (dominic@heutelbeck.com)
 *
 * SPDX-License-Identifier: Apache-2.0
 *
 * Protocol Buffer definitions for SAPL API types.
 * These mirror the Java types in io.sapl.api.pdp and io.sapl.api.model.
 */

syntax = "proto3";

package io.sapl.api.proto;

option java_package = "io.sapl.api.proto";
option java_outer_classname = "SaplProtos";
option java_multiple_files = true;

// Mirrors io.sapl.api.model.Value - the central value type for policy evaluation.
// Supports null, boolean, number, text, array, object, undefined, and error states.
message Value {
  oneof kind {
    NullValue null_value = 1;
    bool bool_value = 2;
    string number_value = 3;      // BigDecimal as string for precision
    string text_value = 4;
    ArrayValue array_value = 5;
    ObjectValue object_value = 6;
    bool undefined_value = 7;     // true = undefined
    ErrorValue error_value = 8;
  }
}

// Represents JSON null
message NullValue {}

// Represents an array of values
message ArrayValue {
  repeated Value elements = 1;
}

// Represents an object (map of string keys to values)
message ObjectValue {
  map<string, Value> fields = 1;
}

// Represents an error state (errors are values, not exceptions in SAPL)
message ErrorValue {
  string message = 1;
  repeated string arguments = 2;
}

// Mirrors io.sapl.api.pdp.Decision
// INDETERMINATE is value 0 (proto3 default) so uninitialized fields fail safely.
enum Decision {
  INDETERMINATE = 0;
  PERMIT = 1;
  DENY = 2;
  NOT_APPLICABLE = 3;
}

// Mirrors io.sapl.api.pdp.AuthorizationSubscription
// Represents a request for an authorization decision.
message AuthorizationSubscription {
  Value subject = 1;      // Entity requesting permission
  Value action = 2;       // Activity being requested
  Value resource = 3;     // Resource being accessed
  Value environment = 4;  // Additional contextual information
  Value secrets = 5;      // Secret values for policy evaluation
}

// Mirrors io.sapl.api.pdp.AuthorizationDecision
// Represents the result of policy evaluation.
message AuthorizationDecision {
  Decision decision = 1;
  ArrayValue obligations = 2;  // Actions the PEP must perform
  ArrayValue advice = 3;       // Suggested actions (optional)
  Value resource = 4;          // Potentially transformed resource
}

// Mirrors io.sapl.api.pdp.IdentifiableAuthorizationSubscription
message IdentifiableAuthorizationSubscription {
  string subscription_id = 1;
  AuthorizationSubscription subscription = 2;
}

// Mirrors io.sapl.api.pdp.IdentifiableAuthorizationDecision
message IdentifiableAuthorizationDecision {
  string subscription_id = 1;
  AuthorizationDecision decision = 2;
}

// Mirrors io.sapl.api.pdp.MultiAuthorizationSubscription
// Container for multiple authorization subscriptions.
message MultiAuthorizationSubscription {
  repeated IdentifiableAuthorizationSubscription subscriptions = 1;
}

// Mirrors io.sapl.api.pdp.MultiAuthorizationDecision
// Container for multiple authorization decisions.
message MultiAuthorizationDecision {
  map<string, AuthorizationDecision> decisions = 1;
}
